--- a/Modul 3/tugas.html
+++ b/Modul 3/tugas.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <marquee><h2 align="center"><font color="#9966FF">Free Registration</font></h2></marquee>
+    <h2 align="center"><font color="#9966FF">Free Registration</font></h2>
     <form action="proses.php" method="post" name="form">
         <table width="68%" border="0" align="center" cellpadding="0">
             <tr>
