modified:   Modul 4/latihan.html

--- a/Modul 4/latihan.html
+++ b/Modul 4/latihan.html
@@ -29,7 +29,9 @@
                     alert("Komentar harus diisi")
                 }
             }
-            cekN = cekN
+            cekN = cekNama();
+            cekE = cekEmail();
+            cekK = cekKomentar();
         }
         // function cek() {
         //     if (cekForm) {
