--- a/Modul 3/tugas.html
+++ b/Modul 3/tugas.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h2 align="center"><font color="#9966FF">Free Registration</font></h2>
+    <marquee><h2>Free Registration</h2></marquee>
     <form action="proses.php" method="post" name="form">
         <table width="68%" border="0" align="center" cellpadding="0">
-            <tr>
+            <tr> 
                 <td class="td" width="15%">Nama</td>
                 <td width="2%">:</td>
                 <td width="83%"><input name="txtNama" type="text" id="txtNama"></td>
-            </tr>
+            </tr> 
             <tr>
                 <td class="td">Tgl Lahir</td>
                 <td>:</td>
