change tugas in modul 5

--- a/Modul 4/counter.html
+++ b/Modul 4/counter.html
@@ -16,7 +16,7 @@
                 wert = max - (document.form1.question.value.length);
                 document.form1.rv_counter.value = wert;
             } else {
-                document.form1.rv_counter.value = max - (document.form1.question.value.length);
+                document.form1.rv_counter.value = wert;
             }
         }
     </script>
