--- a/Modul 4/kalkulator.html
+++ b/Modul 4/kalkulator.html
@@ -36,7 +36,7 @@
 <body>
     <form name="myform">
         <h3>Kalkulator Sederhana</h3><br>
-        Nilai A = <input type="text" name="a" size="5"><br>
+        Nilai A = <input type="text" name="a" size="5"><br><br>
         Nilai B = <input type="text" name="b" size="5"><br><br>
         <input type="button" value="+" name="aksi" onclick="tambah()">
         <input type="button" value="-" name="aksi" onclick="kurang()">
