--- a/Modul 3/border.html
+++ b/Modul 3/border.html
@@ -31,6 +31,11 @@ p.inset {
 p.outset {
     border-style:outset;
 }
+
+p {
+    padding: 5px;
+    text-align: center;
+}
 </style>
 <body>
     <p class="dotted"> A dotted border</p>
