--- a/Modul 5/tugas_no_1.html
+++ b/Modul 5/tugas_no_1.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pertama</title>
-    <script type="text/javascript" src="./dist/jquery.min.js"></script>
+    <title>Tugas Pertama</title>
+    <script type="text/javascript" src="dist/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $(".sembunyi").click(function () {
@@ -29,9 +28,9 @@
 <body>
     <button class="sembunyi">Sembunyikan</button>
     <button class="tampil">Tampilkan</button>
-    <p><img id="foto" src="https://source.unsplash.com/400x300?mountain"></p>
+    <p><img id="foto" src="img/mountain.jpg"></p>
     <button class="sembunyi1">Sembunyikan</button>
     <button class="tampil1">Tampilkan</button>
-    <p><img id="foto1" src="https://source.unsplash.com/400x300?dessert"></p>
+    <p><img id="foto1" src="img/kue.jpg"></p>
 </body>
 </html>
